# wg_gesucht_updater

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yaml
src/: args.rs  auth_data.rs  client.rs  config.rs  config_file.rs  configuration.rs  error.rs  functions.rs  html_ext.rs  lib.rs  login_data.rs  main.rs  patch_data.rs  response_ext.rs  session.rs  settings.rs
src/client/: session.rs
src/config_file/: account.rs
src/error/: failed_updates.rs
supply-chain/: config.toml
systemd/: wg-gesucht.service  wg-gesucht.timer
