[package]
name = "wg_gesucht_updater"
version = "0.1.2"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.6", features = ["derive"] }
env_logger = "0.10.0"
log = "0.4.20"
once_cell = "1.18.0"
reqwest = { version = "0.11.22", features = ["json", "cookies"] }
scraper = "0.17.1"
serde = { version = "1.0.189", features = ["derive"] }
serde_rw = { version = "0.4.2", features = ["toml"] }
tokio = { version = "1.33.0", features = ["rt-multi-thread", "macros"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "z"
panic = "abort"
