[package]
name = "wg_gesucht_updater"
version = "0.1.7"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
clap = { version = "4.5.2", features = ["derive"] }
env_logger = "0.11.3"
log = "0.4.21"
once_cell = "1.19.0"
reqwest = { version = "0.11.26", features = ["json", "cookies"] }
scraper = "0.19.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_rw = { version = "0.4.2", features = ["toml"] }
tokio = { version = "1.36.0", features = ["rt-multi-thread", "macros"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "z"
panic = "abort"
