[package]
name = "wg_gesucht_updater"
version = "0.2.1"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
env_logger = "0.11"
log = "0.4"
once_cell = "1.19"
reqwest = { version = "0.12", features = ["json", "cookies"] }
scraper = "0.20"
serde = { version = "1.0", features = ["derive"] }
serde_rw = { version = "0.4", features = ["toml"] }
tokio = { version = "1.39", features = ["rt-multi-thread", "macros"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "z"
panic = "abort"
